ChangeLog about Mulk: open source non-interactive multi-connection network
downloader with image filtering and Metalink support (version 0.6.0, beta)


2011/06/28 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, whole checksum of a file sometimes was miscomputed due to unsynchronised file

2011/06/26 Emanuele <pocoyo@users.sourceforge.net>
	* two new library's functions have added, mulk_set_short_option and mulk_set_long_option

2011/06/08 Emanuele <pocoyo@users.sourceforge.net>
	* several fixes made in order to assure that the library's functions can called more than once for each instance

2011/06/04 Emanuele <pocoyo@users.sourceforge.net>
	* the option directories are now evaluated only once at startup
	* removed last dependencies between metalink files and their options
	* new option to read, from an external text file, a list of metalink urls to download

2011/04/29 Emanuele <pocoyo@users.sourceforge.net>
	* the options can be evaluated by callbacks
	* fix to avoid recursive calls in option file
	* dependency between new metalink urls and related options has been removed. The options are evaluated when download process is running

2011/04/22 Emanuele <pocoyo@users.sourceforge.net>
	* specific Mulk return codes have been added to the library functions
	* new --with-libmetalink option in configure in order to specify different path for libmetalink library

2010/11/19 Emanuele <pocoyo@users.sourceforge.net>
	* MSVC solution has been revisited and rationalised

2010/09/29 Emanuele <pocoyo@users.sourceforge.net>
	* a short notice about license has been added. It is visible with version option

2010/09/27 Emanuele <pocoyo@users.sourceforge.net>
	* unique DEBUG compilation flag has been created 
	* check in configure.ac for malloc, calloc, free and vsnprintf has been added

2010/09/24 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, when downloading Metalink file size, under some circumstances not all the possible URLs were tried