@@ -2,6 +2,9 @@ ChangeLog about Mulk: open source non-interactive multi-connection network
 downloader with image filtering and Metalink support (version 0.6.0, beta)
 
 
+2011/07/01 Emanuele <pocoyo@users.sourceforge.net>
+	* bug fixed, http://www.example.com and http://www.example.com/ have to be considered the same url
+
 2011/06/28 Emanuele <pocoyo@users.sourceforge.net>
 	* bug fixed, whole checksum of a file sometimes was miscomputed due to unsynchronised file
 
